--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   lottie: ^3.3.1
   flutter_svg: ^2.2.1
+  intl: ^0.20.2
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
